--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,49 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
+  width: 800px;
+  height: 370px;
+  margin: 0 auto;
+  padding: 0.5px;
   background: #fff;
-  margin: 16px auto;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 35px;
+  font-weight: bold;
+  padding: 15px;
+  margin: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 30px;
+  padding: 20px 15px;
+  margin: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  height: 150px;
+  font-size: 30px;
+  padding: 20px;
+  text-align: center;
+  margin: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  font-size: 30px;
+  padding: 15px 40px;
 }
