--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,15 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+.links {
+  display: flex;
+  gap: 20px;
 }
 
 .profile-image {
@@ -34,6 +43,7 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
+  height: 50px;
   padding: 8px 24px;
 }
 
@@ -46,3 +56,15 @@ a {
 ul {
   list-style-type: none;
 }
+
+.left-links {
+  display: flex;
+}
+
+.right-links,
+.left-links {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
