--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -21,6 +21,7 @@ body {
 .links {
   display: flex;
   gap: 20px;
+  /* Both of these can go under <ul> tag as there is only one list */
 }
 
 .profile-image {
@@ -55,10 +56,6 @@ a {
 
 ul {
   list-style-type: none;
-}
-
-.left-links {
-  display: flex;
 }
 
 .right-links,
