--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
 }
@@ -23,4 +29,30 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/* I only wrote below code */
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.info {
+  display: flex;
+  margin: 20px;
+  padding: 5px;
+  gap: 52px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text {
+  text-align: center;
+  flex-wrap: wrap;
 }
