--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
 html, body {
   height: 100%;
 }
 
 body {
+  /* This aligns our white dabba in the middle */
   font-family: Roboto, sans-serif;
   margin: 0;
   background: #aaa;
@@ -20,6 +22,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  /* I coded after this */
+  padding: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .icon {
@@ -66,4 +72,19 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.text {
+  margin-bottom: 12px;
 }
