Position our content

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -12,6 +12,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -57,4 +60,10 @@ a:hover {
 
 ul {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
