--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-div, ul {
+/* div, ul {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   border: 1px solid black;
-}
+} */
 
 body {
   height: 100vh;
@@ -26,6 +26,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -36,10 +37,15 @@ input {
   margin-bottom: 16px;
 }
 
-.header {
-  padding: 10px;
+.header,
+.footer {
+  padding:0px 20px;
   display: flex;
   justify-content: space-between;
+}
+
+.footer {
+  background: #eeeeee;
 }
 
 .left-links,
