--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
@@ -26,4 +32,41 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/* I started writing after this */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+}
+
+.content-cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px;
+  gap: 30px;
+}
+
+.card {
+  width: 400px;
+  height: 450px;
+  padding: 30px;
+}
+
+.header {
+  display: flex;
+  font-size: 30px;
+  font-weight: bold;
+  align-items: center;
+  padding: 0px 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
