--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .sidebar {
-  width: 300px;
+  width: 600px;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -69,4 +69,19 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
